[package]
name = "edge_service"
version = "0.1.0"
authors = ["wolfgang friedl <wolfgang.friedl@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Easy Ctrl-C handler for Rust projects
ctrlc = "3.1.3"
# Web framework
rocket = "0.4.2"
# Procedural macros for the Rocket web framework
rocket_codegen = "0.4.2"
# Community contributed libraries for the Rocket web framework.
rocket_contrib = "0.4.2"
# A generic serialization/deserialization framework
serde = "1.0"
# A JSON serialization file format
serde_json = "1.0"
# Macros 1.1 implementation of #[derive(Serialize, Deserialize)]
serde_derive = "1.0"